# ObsiThemeRef

./: .all-contributorsrc  .gitignore  404.html  CONTRIBUTING.md  Makefile  README.md  add_theme.py  index.html  main.py  markdown_helper.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  remove_downloads.py  requirements.txt  setup.py  sitemap.xml  tree.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1-bug-report.md  2-feature-request.md  4-add-theme.md
archive/: markdown_helper.py  remove_downloads.py
contributions/: index.html
credits/: index.html
credits/contributions/: index.html
credits/licenses/: index.html
credits/licenses/highlight.js/: index.html
credits/licenses/otr/: index.html
credits/licenses/tablesort.js/: index.html
docs/: contributions.md  index.md
docs/credits/: contributions.md  index.md
docs/credits/licenses/: highlight.js.md  index.md  otr.md  tablesort.js.md
docs/overrides/: main.html
docs/reference-criteria/: index.md
docs/scoring-system/: index.md  leaderboard.md
docs/stylesheets/: styles.css
docs/themes/: categories.md  index.md  leaderboard.md
languages/: shell.js  shell.min.js
overrides/: main.html
overrides/partials/: comments.html
reference-criteria/: index.html
scoring-system/: index.html
scoring-system/leaderboard/: index.html
search/: search_index.json
stylesheets/: styles.css
themes/: index.html
themes/_a/: index.html
themes/a/: index.html
themes/b/: index.html
themes/c/: index.html
themes/categories/: index.html
themes/leaderboard/: index.html
(+159 files in other folders)
